<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="delButtonText"><![CDATA[<-]]></string>
    <string name="startString">0</string>
    <string name="errorMessage">Error</string>
    <string name="copyMessage">Result was copied!</string>
    <string name="c">C</string>
    <string name="div">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="mul">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="eq">=</string>
</resources>