<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lable"
        android:layout_width="match_parent"
        android:layout_height = "wrap_content"
        android:layout_weight="2"
        android:gravity="end|bottom"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorBisсuit"
        android:textColor="@color/colorBlack"
        android:textSize="90sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/c"
            android:textSize="50sp"
            android:background="@color/colorYellow"
            android:layout_margin="4dp"
            />

        <Button
            android:id="@+id/del"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/delButtonText"
            android:textSize="50sp"
            android:background="@color/colorYellow"
            android:layout_margin="4dp"
            />

        <Button
            android:id="@+id/div"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/div"
            android:textSize="50sp"
            android:background="@color/colorYellow"
            android:layout_margin="4dp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="50sp"
            />

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="50sp"
            />


        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="50sp"

            />

        <Button
            android:id="@+id/mul"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/mul"
            android:textSize="50sp"
            android:background="@color/colorYellow"
            android:layout_margin="4dp"

            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="50sp"
            />

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="50sp"
            />


        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="50sp"
            />

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="50sp"
            android:background="@color/colorYellow"
            android:layout_margin="4dp"

            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="50sp"
            />

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="50sp"
            />


        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="3"
            android:textSize="50sp"
            />

        <Button
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="+"
            android:textSize="50sp"
            android:background="@color/colorYellow"
            android:layout_margin="4dp"

            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/zero"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/_0"
            android:textSize="50sp"
            />

        <Button
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/dot"
            android:textSize="50sp"

            />

        <Button
            android:id="@+id/solve"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eq"
            android:textSize="50sp"
            android:background="@color/colorYellow"
            android:layout_margin="4dp"
            />
    </LinearLayout>


</LinearLayout>